--- a/css/proyecto.css
+++ b/css/proyecto.css
@@ -24,7 +24,6 @@ footer img{
     height: 300px;
 }
 
-/* Style the buttons that are used to open the tab content */
 .tab button {
     
     background-color: inherit;
@@ -38,22 +37,24 @@ footer img{
     transition: 0.3s;
 }
 
-/* Change background color of buttons on hover */
+
 .tab button:hover {
     background-color: #ddd;
 }
 
-/* Create an active/current "tab button" class */
-.tab button.active {
-    background-color: #ccc;
-}
 
-/* Style the tab content */
 .tabcontent {
-    
+    animation: fadeEffect 1s;
     padding: 0px 12px;
     border: 1px solid #ccc;
     width: 100%;
     border-left: none;
     height: 300px;  
+    overflow-y:scroll;
+}
+
+
+@keyframes fadeEffect {
+    from {opacity: 0;}
+    to {opacity: 1;}
 }
