index desktop terminado

--- a/css/proyecto.css
+++ b/css/proyecto.css
@@ -16,6 +16,11 @@ footer img{
 	width: 75%;
 }
 
+div#Resultados img{
+	width: 100%;
+	height: auto;
+}
+
 .tab {
     
     border: 1px solid #ccc;
