--- a/css/proyecto.css
+++ b/css/proyecto.css
@@ -1,15 +1,24 @@
 /* CSS Stylesheet */
-* {
-	border: 1px solid red;
-}
+@import url('https://fonts.googleapis.com/css?family=Oswald');
+
+
 header > h1,h2{
     text-align: center;
+	font-family: 'Oswald', sans-serif;
+}
 
+footer {
+	border: 1px solid #ccc;
 }
 
 footer img{
     width: 25%;
     align-items: left;
+}
+
+.col-img {
+	width: 100%;
+	height: auto;
 }
 
 .img-container img {
