--- a/css/proyecto.css
+++ b/css/proyecto.css
@@ -1,9 +1,9 @@
 /* CSS Stylesheet */
 @import url('https://fonts.googleapis.com/css?family=Oswald');
 
-* {
+/* * {
 	border: 1px solid red;
-}
+} */
 
 header > h1,h2{
     text-align: center;
