--- a/css/timeline.css
+++ b/css/timeline.css
@@ -1,3 +1,9 @@
+div#timeline{
+  font-weight: lighter;
+  height: 100%;
+  background-color: #ddd;
+}
+
 .circle {
   font-weight: bold;
   padding: 15px 20px;
