--- a/css/proyecto.css
+++ b/css/proyecto.css
@@ -5,9 +5,20 @@
 	border: 1px solid red;
 } */
 
+header {
+	background-image: url("../img/header.jpg");
+	background-size: 30% auto;
+	background-repeat: no-repeat;
+	background-position: center;
+	filter:alpha(opacity=50);
+	opacity:.8; 
+}
+
+
 header > h1,h2{
     text-align: center;
 	font-family: 'Oswald', sans-serif;
+	opacity: 1;
 }
 
 footer {
